<resources>
    <string name="app_name" translatable="false">Coração Cristão</string>

    <!-- MainActivity -->
    <string name="home">Return</string>
    <string name="share">Share</string>
    <string name="about">About Us</string>

    <!-- Links -->
    <string name="site" translatable="false">http://www.s2cristao.com.br</string>
    <string name="site_share" translatable="false">http://bit.ly/google-play-s2-cristao</string>

    <!-- Intent Button Share -->
    <string name="share_subject">Look this amazing app!</string>
    <string name="share_message">S2 Cristão it\'s the first social media that you can find of your religion, talk and make new friends!</string>
    <string name="subscribe_now">Subscribe now!</string>
    <string name="share_header_when_clicked">Choose where want to share:</string>

    <!-- About Activity -->
    <string name="xml_about_title">We are the first social network focused on christianity</string>
    <string name="xml_about_description">We believe that we can connect help and sharing the christianity around the world</string>

    <!-- Toasts -->
    <string name="toast_welcome">Welcome</string>

    <!--Alert Dialogue -->
    <string name="alert_title_no_Internet">No Internet Connection</string>
    <string name="alert_description_no_internet">You need to have Mobile Data or wifi to access this. Press ok to Exit and check your connection.</string>
    <string name="alert_user_answer" translatable="false">Ok</string>

    <!-- Menu list -->
    <string name="sign_out">Sign Out</string>
    <string name="rate_us">Rate us</string>
</resources>
